   device Manufacturer, Model and Serial Number values with some buggy device
   firmware or hardware. [PR #2604, issues #1925, #414]
   * Currently this was tested to fix certain device discovery with `usbhid-ups`;
     should also apply out of the box to same discovery logic in `blazer_usb`,
     `nutdrv_qx`, `riello_usb` and `tripplite_usb` drivers.
   * More work may be needed for other USB-capable drivers (`richcomm_usb`,
     `nutdrv_atcl_usb`) and for general code to collect string readings and
     other data points, and for `nut-scanner`.

 - Introduced a new driver concept for interaction with OS-reported hardware
   monitoring readings. Currently instantiated as `hwmon_ina219` specifically
   made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"
   subsystem of its "sysfs" interface (and talking I2C under the hood), this
   approach seems to have good potential to expand into covering more devices
   and perhaps platforms. [#2430]

 - upsmon:
   * it was realized that the `POWERDOWNFLAG` must be explicitly set in the
     configuration file, there is no built-in default in the binary program
     (the settings facilitated by the `configure` script during build "only"
     impact the `upsmon.conf.sample`, init-scripts and similar files generated
     from templates). [issue #321, PR #2383]
   * added an `OBLBDURATION` (seconds) setting to optionally delay raising
     the alarm for immediate shutdown in critical situation. [#321]

 - More systemd integration:
   * Introduced a `nut-sleep.service` unit which stops `nut.target` when a
     system sleep was requested, and starts it when the sleep is finished.
     This helps avoid NUT shutting down a woken-up system just because its
     power state was critical before the sleep (called as a `SHUTDOWNCMD`
     implementation by the end-user), and a next-read timestamp was not seen
     (deemed to be a stale UPS, meaning lost communications during critical